--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
     "@prisma/client": "^5.10.2",
